feature extraction and exploration of the detection track dataset

--- a/detection/explore.ipynb
+++ b/detection/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,7 @@
     "NUM_MODEL = 500\n",
     "model_classes = ['MNIST_Network', 'SimpleViT', 'WideResNet']\n",
     "clean_or_trojan = ['clean', 'trojan']\n",
+    "TRIGGER_TYPE = ['patch', 'blended']\n",
     "\n",
     "def num_to_model_id(num):\n",
     "    return 'id-' + str(10000+num)[1:]"
@@ -61,17 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "mnist_train, mnist_test, mnist_num_classes = utils.load_data('MNIST')\n",
-    "poisoned_mnist_train = utils.PoisonedDataset(mnist_train)"
+    "gtsrb_train, gtsrb_test, gtsrb_num_classes = utils.load_data('GTSRB')\n",
+    "train_sets_by_model_arch = {'mnist': mnist_train, 'vit': gtsrb_train}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -94,21 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'mnist_ds' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/scratch/jialin/trojan_detection/projects/tdc-starter-kit/detection/explore.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bmm340.cs.berkeley.edu/scratch/jialin/trojan_detection/projects/tdc-starter-kit/detection/explore.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m model_dict \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mMNIST_Network\u001b[39m\u001b[39m'\u001b[39m: (\u001b[39m1\u001b[39m, \u001b[39m28\u001b[39m, \u001b[39mrange\u001b[39m(\u001b[39m375\u001b[39m, \u001b[39m500\u001b[39m), mnist_ds, \u001b[39m10\u001b[39m), \n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bmm340.cs.berkeley.edu/scratch/jialin/trojan_detection/projects/tdc-starter-kit/detection/explore.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m                 \u001b[39m'\u001b[39m\u001b[39mSimpleViT\u001b[39m\u001b[39m'\u001b[39m: (\u001b[39m3\u001b[39m, \u001b[39m32\u001b[39m, \u001b[39mrange\u001b[39m(\u001b[39m250\u001b[39m, \u001b[39m375\u001b[39m), gtsrb_ds, \u001b[39m43\u001b[39m), \n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bmm340.cs.berkeley.edu/scratch/jialin/trojan_detection/projects/tdc-starter-kit/detection/explore.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m                 \u001b[39m'\u001b[39m\u001b[39mWideResNet_10\u001b[39m\u001b[39m'\u001b[39m: (\u001b[39m3\u001b[39m, \u001b[39m32\u001b[39m, \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39m125\u001b[39m), cifar10_ds, \u001b[39m10\u001b[39m), \n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bmm340.cs.berkeley.edu/scratch/jialin/trojan_detection/projects/tdc-starter-kit/detection/explore.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m                 \u001b[39m'\u001b[39m\u001b[39mWideResNet_100\u001b[39m\u001b[39m'\u001b[39m: (\u001b[39m3\u001b[39m, \u001b[39m32\u001b[39m, \u001b[39mrange\u001b[39m(\u001b[39m125\u001b[39m, \u001b[39m250\u001b[39m), cifar100_ds, \u001b[39m100\u001b[39m)}\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mnist_ds' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_dict = {'MNIST_Network': (1, 28, range(375, 500), mnist_ds, 10), \n",
     "                'SimpleViT': (3, 32, range(250, 375), gtsrb_ds, 43), \n",
@@ -141,6 +131,337 @@
     "2. jacobian: extract eigen value out of the extracted features / try using input data or salt-and-pepper noise\n",
     "3. tuning GBM: ccp_alpha\n",
     "4. change t-score computation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trojan Attacks Reproductions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the generate_attack_specifications function is provided by the competition organizer, with slight alternation\n",
+    "def generate_attack_specifications(seed, num_generate, trigger_type, model_arch_type='mnist'):\n",
+    "    \"\"\"\n",
+    "    Given a random seed, generate attack specifications.\n",
+    "    Each specification consists of a target label and a Trojan trigger.\n",
+    "    Each Trojan trigger consists of a pattern, mask, and alpha (blending parameter)\n",
+    "\n",
+    "    NOTE: This is only meant to be used as a launching point for the Evasive Trojans Track, so non-MNIST code has been removed.\n",
+    "    Training additional networks for other tracks is against the competition rules and will result in disqualification.\n",
+    "\n",
+    "    :param seed: the random seed\n",
+    "    :param num_generate: the number of specifications to generate\n",
+    "    :param trigger_type: the name of the trigger type; currently supports 'patch' or 'blended'\n",
+    "    :returns: num_generate attack specifications for training a dataset of Trojaned networks\n",
+    "    \"\"\"\n",
+    "    rng = np.random.default_rng(seed)\n",
+    "\n",
+    "    # ================== GENERATE TARGET LABELS ================== #\n",
+    "    num_classes = 10 if model_arch_type == 'mnist' else 43\n",
+    "    # evenly distribute across classes, then randomly sample until reaching num_generate\n",
+    "    target_labels = np.arange(num_classes)\n",
+    "    rng.shuffle(target_labels)\n",
+    "    target_labels = torch.from_numpy(target_labels).repeat(1 + num_generate // num_classes)[:num_generate].numpy()\n",
+    "    rng.shuffle(target_labels)\n",
+    "\n",
+    "    # ================== GENERATE TRIGGERS ================== #\n",
+    "    # ================== GET PARAMETERS DEPENDENT ON DATA SOURCE ================== #\n",
+    "    min_trigger_len = 3\n",
+    "    max_trigger_len = 10\n",
+    "    side_len = 28 if model_arch_type == 'mnist' else 32\n",
+    "    num_channels = 1\n",
+    "    \n",
+    "    # ================== GET PATTERNS, MASKS, ALPHA ================== #\n",
+    "    if trigger_type == 'patch':\n",
+    "        patterns = (rng.uniform(0, 1, size=[num_generate, num_channels, side_len, side_len]) > 0.5).astype(np.float32)\n",
+    "        patterns = torch.from_numpy(patterns)\n",
+    "\n",
+    "        # patch attacks for the Evasive Trojans Track use a blending coefficient of 0.2...\n",
+    "        # ...otherwise detection is already too difficult for MNTD.\n",
+    "        # for other tracks, patch attacks use a blending coefficient of 1.0 (i.e., no blending)\n",
+    "        alpha = 0.2 if model_arch_type == 'mnist' else 1\n",
+    "\n",
+    "        height = rng.choice(np.arange(min_trigger_len, max_trigger_len+1), size=num_generate, replace=True)\n",
+    "        width = rng.choice(np.arange(min_trigger_len, max_trigger_len+1), size=num_generate, replace=True)\n",
+    "\n",
+    "        top_left = []\n",
+    "        bottom_right = []\n",
+    "        for i in range(num_generate):\n",
+    "            current_top_left = [rng.choice(np.arange(0, side_len - height[i])), rng.choice(np.arange(0, side_len - width[i]))]\n",
+    "            current_bottom_right = [current_top_left[0] + height[i], current_top_left[1] + width[i]]\n",
+    "            top_left.append(current_top_left)\n",
+    "            bottom_right.append(current_bottom_right)\n",
+    "        top_left = np.stack(top_left)\n",
+    "        bottom_right = np.stack(bottom_right)\n",
+    "        \n",
+    "        masks = []\n",
+    "        for i in range(num_generate):\n",
+    "            mask = utils.create_rectangular_mask(side_len, top_left[i], bottom_right[i])\n",
+    "            masks.append(mask)\n",
+    "        masks = torch.cat(masks, dim=0)\n",
+    "    elif trigger_type == 'blended':\n",
+    "        patterns = rng.uniform(0, 1, size=[num_generate, num_channels, side_len, side_len]).astype(np.float32)\n",
+    "        patterns = torch.from_numpy(patterns)\n",
+    "\n",
+    "        alpha = 0.1\n",
+    "\n",
+    "        masks = torch.ones(num_generate, 1, side_len, side_len)\n",
+    "        top_left = np.zeros([num_generate, 2], dtype=np.int64)\n",
+    "        bottom_right = side_len * np.ones([num_generate, 2], dtype=np.int64)\n",
+    "\n",
+    "    triggers = []\n",
+    "    for i in range(num_generate):\n",
+    "        # include top_left and bottom_right for ease of reference (e.g., for use as a training signal)\n",
+    "        # we include trigger_type for conditioning evasive Trojan attacks on the kind of trigger being used\n",
+    "        triggers.append({'pattern': patterns[i], 'mask': masks[i], 'alpha': alpha, 'top_left': top_left[i], 'bottom_right': bottom_right[i],\n",
+    "                         'trigger_type': trigger_type})\n",
+    "\n",
+    "    # ================== RETURN ATTACK SPECIFICATIONS ================== #\n",
+    "    attack_specifications = []\n",
+    "    for i in range(num_generate):\n",
+    "        attack_specifications.append({'target_label': target_labels[i], 'trigger': triggers[i]})\n",
+    "\n",
+    "    return attack_specifications"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [1:27:23<00:00,  5.24s/it] \n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "dataset_path = '../../tdc_datasets'\n",
+    "task = 'detection'\n",
+    "train_test_val_case = ['train', 'test', 'val']\n",
+    "MODEL_FILEDIRS = {c: os.path.join(dataset_path, task, c) for c in train_test_val_case}\n",
+    "EXTRACTED_DIR = './extracted_features'\n",
+    "TRIGGER_TYPE = ['patch', 'blended']\n",
+    "shorten = {'SimpleViT':'vit', 'MNIST_Network':'mnist', 'WideResNet':'wrn'}\n",
+    "BATCH_SIZE = 60\n",
+    "test_val_case = ['test']\n",
+    "mas = ['mnist', 'vit']\n",
+    "LOSS_DICT = {f'{tvc}_{ma}': [] for tvc, ma in list(product(test_val_case, mas))}\n",
+    "triggers = {ma: {trigger_type: generate_attack_specifications(seed=1, num_generate=100, \n",
+    "                                                              trigger_type=trigger_type, model_arch_type=ma) \n",
+    "                                                              for trigger_type in TRIGGER_TYPE}\n",
+    "                                                              for ma in mas}\n",
+    "for c in test_val_case:\n",
+    "    model_filedir = MODEL_FILEDIRS[c]\n",
+    "    total_models = len(os.listdir(model_filedir))\n",
+    "    for model_num in tqdm(range(total_models)):\n",
+    "        model_id = num_to_model_id(model_num)\n",
+    "        model_filepath = os.path.join(model_filedir, model_id, 'model.pt')\n",
+    "        model = torch.load(model_filepath).to(device)\n",
+    "        model_arch = shorten[model._get_name()]\n",
+    "        if model_arch != 'wrn':\n",
+    "            model.eval()\n",
+    "            \n",
+    "            dataloader = torch.utils.data.DataLoader(train_sets_by_model_arch[model_arch], batch_size=BATCH_SIZE, shuffle=True)\n",
+    "            \n",
+    "            losses = []\n",
+    "            for trigger_type in TRIGGER_TYPE:\n",
+    "                for ind, (raw_input, _) in enumerate(dataloader):\n",
+    "                    if ind >= 100:\n",
+    "                        break\n",
+    "                    input_with_trigger, label_with_trigger = utils.insert_trigger(raw_input, triggers[model_arch][trigger_type][ind])\n",
+    "                    prediction = model(input_with_trigger.to(device))\n",
+    "                    prediction_loss = F.cross_entropy(prediction, label_with_trigger.to(device)).item()\n",
+    "                    losses.append(prediction_loss)\n",
+    "            LOSS_DICT[f'{c}_{model_arch}'].append(losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k, v in LOSS_DICT.items():\n",
+    "    np.save(os.path.join(EXTRACTED_DIR, f'{k}.npy'), np.stack(v, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 125/125 [23:16<00:00, 11.18s/it]\n",
+      "100%|██████████| 125/125 [30:24<00:00, 14.60s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "BATCH_SIZE = 60\n",
+    "LOSS_DICT = {}\n",
+    "triggers = {trigger_type: generate_attack_specifications(seed=1, \n",
+    "                                                         num_generate=6000//60, \n",
+    "                                                         trigger_type=trigger_type,\n",
+    "                                                         model_arch_type='vit') \n",
+    "                                                         for trigger_type in TRIGGER_TYPE}\n",
+    "for cot in clean_or_trojan:\n",
+    "    for model_num in tqdm(range(250, 375)):\n",
+    "        model_id = num_to_model_id(model_num)\n",
+    "        model_filepath = os.path.join(MODEL_FILEDIR, cot, model_id, 'model.pt')\n",
+    "        model = torch.load(model_filepath).to(device)\n",
+    "        model.eval()\n",
+    "\n",
+    "        gtsrb_train_dataloader = torch.utils.data.DataLoader(gtsrb_train, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "\n",
+    "        losses_per_batch = {trigger_type:[] for trigger_type in TRIGGER_TYPE}\n",
+    "        for ind, (raw_input, _) in enumerate(gtsrb_train_dataloader):\n",
+    "            if ind >= 100:\n",
+    "                break\n",
+    "            for trigger_type in TRIGGER_TYPE:\n",
+    "                input_with_trigger, label_with_trigger = utils.insert_trigger(raw_input, triggers[trigger_type][ind])\n",
+    "                prediction = model(input_with_trigger.to(device))\n",
+    "                prediction_loss = F.cross_entropy(prediction, label_with_trigger.to(device)).item()\n",
+    "                losses_per_batch[trigger_type].append(prediction_loss)\n",
+    "        \n",
+    "        LOSS_DICT[f'{model_id}_{cot}'] = losses_per_batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(EXTRACTED_DIR, 'loss_vit.json'), 'w') as outfile:\n",
+    "    json.dump(LOSS_DICT, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOSS_DICT = {'clean': CLEAN_LOSS_DICT, 'trojan': TROJAN_LOSS_DICT}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = [], []\n",
+    "for cot in clean_or_trojan:\n",
+    "    for model_num in range(250, 375):\n",
+    "        model_id = num_to_model_id(model_num)\n",
+    "        key = f'{model_id}_{cot}'\n",
+    "        # loss_dict_per_model = LOSS_DICT[cot][key]\n",
+    "        loss_dict_per_model = LOSS_DICT[key]\n",
+    "        per_model = loss_dict_per_model['patch'] + loss_dict_per_model['blended']\n",
+    "        X.append(per_model)\n",
+    "        y.append(int(cot=='trojan'))\n",
+    "X = np.stack(X, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(os.path.join(EXTRACTED_DIR, 'X_loss_feature_vit.npy'), X)\n",
+    "np.save(os.path.join(EXTRACTED_DIR, 'y_loss_feature_vit.npy'), y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import log_loss\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "def bootstrap_performance(X, y, clf, n=10, test_size=.2, eps=.01):\n",
+    "    all_cross_entropy, all_accuracy = [], []\n",
+    "    for i in tqdm(range(n)):\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=i)\n",
+    "        \n",
+    "        clf.set_params(random_state=i)            \n",
+    "        clf.fit(X_train, y_train)\n",
+    "        \n",
+    "        all_cross_entropy.append(log_loss(y_test, clf.predict_proba(X_test), eps=eps))\n",
+    "        all_accuracy.append(clf.score(X_test, y_test))\n",
+    "    return all_cross_entropy, all_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [08:23<00:00, 10.07s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.6399090199852165, 0.6552000000000001)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = GradientBoostingClassifier(learning_rate=.006, n_estimators=750, max_depth=3, min_samples_leaf=22, min_samples_split=2)\n",
+    "cen, acc = bootstrap_performance(X, y, clf, n=50)\n",
+    "np.mean(cen), np.mean(acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = GradientBoostingClassifier(learning_rate=.006, n_estimators=750, max_depth=3, min_samples_leaf=22, min_samples_split=2)\n",
+    "param = {'max_features': range(2, 202, 20), 'min_samples_leaf':range(2, 25, 2), 'min_samples_split': range(2, 25, 2)}   #\n",
+    "gsearch = GridSearchCV(estimator=clf, param_grid=param, scoring=['neg_log_loss', 'accuracy'], n_jobs=10, cv=5, refit=False);\n",
+    "gsearch.fit(X, y);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = pd.DataFrame(gsearch.cv_results_).sort_values(by=['rank_test_accuracy', 'rank_test_neg_log_loss'])\n",
+    "result.to_csv('/scratch/jialin/trojan_detection/projects/tdc-starter-kit/detection/extracted_features/gsearch_result.csv')"
    ]
   },
   {
@@ -1040,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,15 +1861,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = pd.DataFrame(gsearch.cv_results_).sort_values(by=['rank_test_accuracy', 'rank_test_neg_log_loss'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "result = pd.DataFrame(gsearch.cv_results_).sort_values(by=['rank_test_accuracy', 'rank_test_neg_log_loss'])\n",
     "result.to_csv('/scratch/jialin/trojan_detection/projects/tdc-starter-kit/detection/extracted_features/gsearch_result.csv')"
    ]
   },
